--- a/letras.htm
+++ b/letras.htm
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos-int.css">
   </head>
   <body>
-    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
           alt="1ª KOMUNION"> </a> </header>
     <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
@@ -53,7 +53,7 @@
         <h2 id="Primera_Komunion">Primera Komunión</h2>
         <p class="credito">Letra y música 1ª K. (De la maqueta “Tour ’89”)</p>
         <!-- REPRODUCTOR --> <br>
-        <audio controls="controls" preload="none"> <source src="audios/01%20-%201a%20Komunion.mp3"
+        <audio controls="controls" preload="none"> <source src="audios/01%20-%201a%20Komunion.mp3"
             type="audio/mpeg"> Tu navegador no soporta audio HTML5. </audio><br>
         <br>
         <p class="letra">Yo tenía 9 años,<br>¡y cómo no!, iba a un colegio de Hermanos.<br>Me enseñaron todos los pecados capitales,<br>pero no me dijeron ninguna de las mayores verdades.<br>&nbsp;&nbsp;&nbsp; Por un sucio sacramento<br>Una iglesia llena de niños,<br>todos vestiditos iguales.<br>Dinero gastado en vano;<br>El viejo sin un duro en los bolsillos.<br>(Abre el bolsillo y cierra la boca)<br>&nbsp;&nbsp;&nbsp; Por un sucio sacramento</p>
@@ -499,7 +499,7 @@
         <h2 id="Intro">Intro</h2>
         <p class="credito">Música: L. Solaz. (Inédita. Grabado en Alcora el 28/4/90)</p>
         <!-- REPRODUCTOR --> <br>
-        <audio controls="controls" preload="none" src="audios/Intro.mp3"> <source
+        <audio controls="controls" preload="none" src="audios/Intro.mp3"> <source
             src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
           navegador no soporta audio HTML5. </audio><br>
         <br>
@@ -521,7 +521,7 @@
         <h2 id="El_Nani">El Nani</h2>
         <p class="credito">Adaptación desafortunada. (Inédita. Grabado en Alcora el 28/4/90)</p>
         <!-- REPRODUCTOR --> <br>
-        <audio controls="controls" preload="none" src="audios/El%20nani.mp3"> <source
+        <audio controls="controls" preload="none" src="audios/El%20nani.mp3"> <source
             src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
           navegador no soporta audio HTML5. </audio><br>
         <br>
@@ -531,7 +531,7 @@
           </a></p>
         <p class="volver"><a href="#inicio"><br>
           </a></p>
-        <h2 id="No_puedes_mas">Queria el mundo cambiar</h2>
+        <h2 id="Queria_el_mundo_cambiar">Queria el mundo cambiar</h2>
         <p class="credito">Letra y música: J. Morcillo. (Del CD "Con M de Morcillo - Tributo)</p>
         <br>
         <section class="cancion"><audio controls="controls" preload="none" src="audios/Queria%20El%20Mundo%20Cambiar.mp3">
