--- a/biografia.htm
+++ b/biografia.htm
@@ -20,7 +20,7 @@
         <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
-    <img src="imagenes/grupo1a.jpg" alt="Grupo 1ª Komunión" class="bio-img">
+    <br>
     <main class="contenido">
       <main class="contenido">
         <p>Corría el año 1988 e internet era prácticamente un pensamiento
@@ -38,6 +38,8 @@
         <p>Y una de las casualidades de la vida: delante de ti, sin saberlo,
           tienes los ingredientes necesarios para cocinar el plato del que hace
           tiempo que te sabes la receta de memoria.</p>
+        <p><br>
+        </p>
         <p class="center big rojo">Había nacido... <strong>1ª Komunión</strong>:</p>
         <section class="integrantes">
           <article class="integrante"> <img src="imagenes/Bici.jpg" alt="Antonio Bici Díaz">
@@ -63,27 +65,48 @@
           “dieron a luz” todos aquellos conciertos (unos 84 más o menos),
           grabaciones y sesiones de guasa inolvidables tanto para sus miembros
           como para sus seguidores.</p>
-        <p class="center"> <img src="imagenes/lapida2.gif" alt="Lápida" class="lapida">
+        <p class="center"><br>
         </p>
-        <p>Peeeerooooo...... pasaron los años, y tras 16 años sin tocar,
-          decidimos resucitar con motivo del 20º aniversario de la formación del
-          grupo.</p>
-        <p>Para conmemorar tal aniversario, reaparecimos actuando en el XIII
-          Bestialc de L'Alcora, el 30 de agosto de 2008. Con sólo unos ensayos
-          (7), y en plan kamikaze, pensamos que para la ocasión debíamos hacer
-          algo que quedase ya plasmado para la posteridad, con lo que gracias a
-          la colaboración de Lalo Cotanda, Juanki y sobre todo al público que
-          una vez más vino a vernos, brindándonos la ocasión de vivir una noche
-          inolvidable con su presencia, pudimos grabar el bolo en vídeo,
-          pensando sobre todo que nuestros hijos el día de mañana puedan tirar
-          las copias a la basura pensando lo pillados que estaban sus padres.</p>
-        <p>Y de esta forma, grabamos y editamos un DVD con la mayor parte de las
-          canciones que perpetramos en ese concierto, entrevistas, algunas
-          fotos...</p>
-        <p>Luego, ya veremos lo que nos deparará el destino, ya que la vida es
-          como es, y no como nosotros queremos que sea.</p>
-        <p class="center rojo">Así que de momento y mientras nos quede un atisbo
-          de ganas de pasarlo bien...</p>
+        <p class="center"><img src="imagenes/grupo1a.jpg" alt="Grupo 1ª Komunión"
+            class="bio-img"></p>
+        <p class="center"><br>
+        </p>
+        Peeeerooooo...... pasaron los años, y tras 16 años sin tocar, decidimos
+        resucitar con motivo del 20º aniversario de la formación del grupo.<br>
+        <br>
+        Para conmemorar tal aniversario, reaparecimos actuando en el XIII
+        Bestialc de L'Alcora, el 30 de agosto de 2008.<br>
+        Con unos pocos ensayos, y en plan kamikaze, pensamos que para la ocasión
+        debíamos hacer algo que quedase ya plasmado para la posteridad, con lo
+        que gracias a la colaboración de Lalo Cotanda, Juanki y sobre todo al
+        público que una vez más vino a vernos, brindándonos la ocasión de vivir
+        una noche inolvidable con su presencia, pudimos grabar el bolo en vídeo,
+        pensando sobre todo que nuestros hijos el día de mañana puedan tirar las
+        copias a la basura pensando lo pillados que estaban sus padres.<br>
+        Y de esta forma, grabamos y editamos un DVD con la mayor parte de las
+        canciones que perpetramos en ese concierto, entrevistas, algunas
+        fotos...<br>
+        <br>
+        Ya puestos en harina, en 2011 , sacamos un CD con los temas que habían
+        quedado en el tintero por grabar. Este Cd fue "Konfirmación", y por
+        petición de Juanki, grabamos el tema "Quería el mundo cambiar" de J.
+        Morcillo, que incluimos como videoclip en nuestro Cd, y apareció en el
+        recopilatorio tributo a Morcillo.<br>
+        Hicimos unos cuantos bolos por diferentes locales y participamos en
+        varios festivales, hasta que por motivos de salud, nuestro amigo Antonio
+        "Bici" ya no pudo acompañarnos con su voz. Teniendo un concierto
+        pendiente, se puso a la voz Jesús "Madri", y a la batería su hijo
+        Ferrán.<br>
+        Poco después, en 2022, la voz y el alma de nuestro sonido, Antonio
+        "Bici", nos dejó prematuramente. <br>
+        Ese mismo año, en el Festival Ultrasons, decidimos hacer un último
+        concierto como homenaje a nuestro compañero y amigo, teniendo nuevamente
+        a Jesús a la voz y a Ferrán a la batería, con Carlos Medina a la
+        guitarra y los cameos de Toni y J.L. Lorente "El Chino", cantando un par
+        de temas.<br>
+        <br>
+        <font style="color: red;" face="Verdana" size="2"><b><span lang="ES-TRAD">Por
+              Siempre y Para Siempre</span></b><span lang="ES-TRAD">:</span></font>
         <p class="center"> <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank">
             <img src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial"
               height="240" width="320"> </a></p>
