--- a/biografia.htm
+++ b/biografia.htm
@@ -67,7 +67,7 @@
           como para sus seguidores.</p>
         <p class="center"><br>
         </p>
-        <p class="center"><img src="imagenes/grupo1a.jpg" alt="Grupo 1ª Komunión"
+        <p class="center"><img src="imagenes/grupo1a.jpg" alt="Grupo 1ª Komunión"
             class="bio-img"></p>
         <p class="center"><br>
         </p>
@@ -94,7 +94,7 @@
         recopilatorio tributo a Morcillo.<br>
         Hicimos unos cuantos bolos por diferentes locales y participamos en
         varios festivales, hasta que por motivos de salud, nuestro amigo Antonio
-        "Bici" ya no pudo acompañarnos con su voz. Teniendo un concierto
+        "Bici" ya no pudo acompañarnos con su voz. Teniendo un último concierto
         pendiente, se puso a la voz Jesús "Madri", y a la batería su hijo
         Ferrán.<br>
         Poco después, en 2022, la voz y el alma de nuestro sonido, Antonio
@@ -108,7 +108,7 @@
         <font style="color: red;" face="Verdana" size="2"><b><span lang="ES-TRAD">Por
               Siempre y Para Siempre</span></b><span lang="ES-TRAD">:</span></font>
         <p class="center"> <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank">
-            <img src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial"
+            <img src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial"
               height="240" width="320"> </a></p>
       </main>
       <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"> </a></main>
