Fix HTML structure and content in biografia.htm

--- a/biografia.htm
+++ b/biografia.htm
@@ -101,7 +101,7 @@
         "Bici", nos dejó prematuramente. <br>
         Ese mismo año, en el Festival Ultrasons, decidimos hacer un último
         concierto como homenaje a nuestro compañero y amigo, teniendo nuevamente
-        a Jesús a la voz y a Ferrán a la batería, con Carlos Medina a la
+        a Jesús a la voz y a Ferrán a la batería, con la colaboración de Carlos Medina a la
         guitarra y los cameos de Toni y J.L. Lorente "El Chino", cantando un par
         de temas.<br>
         <br>
@@ -114,3 +114,4 @@
       <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"> </a></main>
   </body>
 </html>
+
