--- a/biografia.htm
+++ b/biografia.htm
@@ -26,15 +26,20 @@
         <p>Corría el año 1988 e internet era prácticamente un pensamiento
           futurista. Me refiero exactamente, que menos el fútbol de 2ª regional
           y las veladas pugilísticas de Estudio 17 (no te digo na´) todo lo
-          demás en esa época era bastante aburrido en domingo. Menos mal que por
-          encima de todo se encontraba lo que realmente había importado hasta la
-          fecha y que fuese la hora que fuese, te esperaba sin malos rollos y en
-          el mismo estado de siempre. Estoy por supuesto hablando de la <strong>MÚSICA</strong>.</p>
+          demás en esa época era bastante aburrido en domingo.</p>
+        <p>Menos mal que por encima de todo se encontraba lo que realmente había
+          importado hasta la fecha y que fuese la hora que fuese, te esperaba
+          sin malos rollos y en el mismo estado de siempre. Estoy por supuesto
+          hablando de la <strong>MÚSICA</strong>.</p>
+        <p><br>
+        </p>
         <p>Por entonces lo más difícil siempre era encontrar a alguien, que al
           igual que tú, estuviera dispuesto a descargar toda la energía del
           Universo intentando emular a sus héroes musicales. Solamente había dos
           posibilidades: 1ª los músicos en dique seco 2ª aquellos que les hervía
           la sangre por hacer algo que les sacara de la rutina.</p>
+        <p><br>
+        </p>
         <p>Y una de las casualidades de la vida: delante de ti, sin saberlo,
           tienes los ingredientes necesarios para cocinar el plato del que hace
           tiempo que te sabes la receta de memoria.</p>
@@ -44,31 +49,33 @@
         <section class="integrantes">
           <article class="integrante"> <img src="imagenes/Bici.jpg" alt="Antonio Bici Díaz">
             <p class="nombre">Antonio “Bicicleta” Díaz</p>
-            <p>Voz de voces</p>
+            <p><span style="color: #cc33cc;">Voz de voces</span></p>
           </article>
           <article class="integrante"> <img src="imagenes/PATRI.jpg" alt="Patricio Tomás">
             <p class="nombre">Patricio Tomás</p>
-            <p>Superior del Monasterio de los guitarristas descalzos</p>
+            <p><span style="color: #cc33cc;">Superior del Monasterio de los
+                guitarristas descalzos</span></p>
           </article>
           <article class="integrante"> <img src="imagenes/Luis.jpg" alt="Luis Solaz">
             <p class="nombre">Luis Solaz</p>
-            <p>Superviviente de la Vaquilla del Ángel, bajista y apoyo logístico</p>
+            <p><span style="color: #cc33cc;">Supuesto bajista y apoyo logístico</span></p>
           </article>
           <article class="integrante"> <img src="imagenes/MADRI.jpg" alt="Jesús El Madri Gallardo">
             <p class="nombre">Jesús “El Madri” Gallardo</p>
-            <p>Aburrido compulsivo baterista</p>
+            <p><span style="color: #cc33cc;">Aburrido compulsivo baterista</span></p>
           </article>
         </section>
         <p>Y como todo el mundo sabe, este maravilloso y jugoso manjar, duró lo
           que los comensales tardaron en rebañar el plato. Nada más y nada menos
-          que 4 magníficos años. Por cierto, prolíficos y fructuosos años que
-          “dieron a luz” todos aquellos conciertos (unos 84 más o menos),
-          grabaciones y sesiones de guasa inolvidables tanto para sus miembros
-          como para sus seguidores.</p>
+          que 4 magníficos años.</p>
+        <p>Por cierto, prolíficos y fructuosos años que “dieron a luz” todos
+          aquellos conciertos (unos 84 más o menos), grabaciones y sesiones de
+          guasa inolvidables tanto para sus miembros como para sus seguidores.</p>
         <p class="center"><br>
         </p>
-        <p class="center"><img src="imagenes/grupo1a.jpg" alt="Grupo 1ª Komunión"
-            class="bio-img"></p>
+        <p class="center"><a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"><img
+              src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial" height="240"
+              width="320"></a></p>
         <p class="center"><br>
         </p>
         Peeeerooooo...... pasaron los años, y tras 16 años sin tocar, decidimos
@@ -88,30 +95,28 @@
         fotos...<br>
         <br>
         Ya puestos en harina, en 2011 , sacamos un CD con los temas que habían
-        quedado en el tintero por grabar. Este Cd fue "Konfirmación", y por
-        petición de Juanki, grabamos el tema "Quería el mundo cambiar" de J.
-        Morcillo, que incluimos como videoclip en nuestro Cd, y apareció en el
-        recopilatorio tributo a Morcillo.<br>
+        quedado en el tintero por grabar, y algunas colaboraciones en
+        recopilatorios y tributos.<br>
+        <br>
         Hicimos unos cuantos bolos por diferentes locales y participamos en
-        varios festivales, hasta que por motivos de salud, nuestro amigo Antonio
-        "Bici" ya no pudo acompañarnos con su voz. Teniendo un último concierto
-        pendiente, se puso a la voz Jesús "Madri", y a la batería su hijo
-        Ferrán.<br>
-        Poco después, en 2022, la voz y el alma de nuestro sonido, Antonio
-        "Bici", nos dejó prematuramente. <br>
+        varios festivales, hasta que en 2022, por motivos de salud, nuestro
+        compañero Antonio "Bici" ya no pudo acompañarnos con su voz. Teniendo un
+        último concierto pendiente, se puso a la voz Jesús "El Madri", y a la
+        batería su hijo Ferrán.<br>
+        <br>
+        Poco después, la voz y el alma de nuestro sonido, Antonio "Bici", nos
+        dejó prematuramente. <br>
         Ese mismo año, en el Festival Ultrasons, decidimos hacer un último
         concierto como homenaje a nuestro compañero y amigo, teniendo nuevamente
-        a Jesús a la voz y a Ferrán a la batería, con la colaboración de Carlos Medina a la
+        a Jesús a la voz y a Ferrán a la batería, con Carlos Medina a la
         guitarra y los cameos de Toni y J.L. Lorente "El Chino", cantando un par
         de temas.<br>
         <br>
         <font style="color: red;" face="Verdana" size="2"><b><span lang="ES-TRAD">Por
               Siempre y Para Siempre</span></b><span lang="ES-TRAD">:</span></font>
-        <p class="center"> <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank">
-            <img src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial"
-              height="240" width="320"> </a></p>
-      </main>
+        <br>
+        <br>
+        <img src="imagenes/homenajebici.jpg" alt=""> </main>
       <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"> </a></main>
   </body>
 </html>
-
