--- a/biografia.htm
+++ b/biografia.htm
@@ -21,12 +21,12 @@
       </ul>
     </nav>
     <br>
-    <main class="contenido">
+    <main class="contenido"><br>
+      Corría el año 1988 e internet era prácticamente un pensamiento futurista.
+      Me refiero exactamente, que menos el fútbol de 2ª regional y las veladas
+      pugilísticas de Estudio 17 (no te digo na´) todo lo demás en esa época era
+      bastante aburrido en domingo.
       <main class="contenido">
-        <p>Corría el año 1988 e internet era prácticamente un pensamiento
-          futurista. Me refiero exactamente, que menos el fútbol de 2ª regional
-          y las veladas pugilísticas de Estudio 17 (no te digo na´) todo lo
-          demás en esa época era bastante aburrido en domingo.</p>
         <p>Menos mal que por encima de todo se encontraba lo que realmente había
           importado hasta la fecha y que fuese la hora que fuese, te esperaba
           sin malos rollos y en el mismo estado de siempre. Estoy por supuesto
@@ -116,7 +116,7 @@
               Siempre y Para Siempre</span></b><span lang="ES-TRAD">:</span></font>
         <br>
         <br>
-        <img src="imagenes/homenajebici.jpg" alt=""> </main>
+        <img src="imagenes/homenajebici.jpg"> </main>
       <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"> </a></main>
   </body>
 </html>
